# brd4_binding

./: .gitignore  README.md  pyproject.toml
brd4_binding/src/: create_descriptor_data.py  get_vector.py
brd4_binding/src/generate_descriptors/: descriptor_runner.py  parallel_descriptor_runner.py
brd4_binding/src/generate_descriptors/pipeline/: collection.py  create_3tuple_vector.py  create_descriptor_df.py  remove_protecting_group.py
notebooks/: brd4_EDA_descriptors.ipynb  brd4_EDA_graph.ipynb  brd4_extraction.ipynb  brd4_sampling.ipynb  debug.ipynb  test_output.ipynb
