[tool.poetry]
name = "brd4_binding"
version = "0.1.0"
description = "project for a ML to predict binding to brd4"
authors = ["Fran <fjarriaza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdkit = "^2024.3.5"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
pandas = "^2.2.3"
ruff = "^0.6.6"
pyspark = "^3.5.2"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
